fix auth styles on mobile (#95)

--- a/src/components/common/AuthWrapper/auth-landing-page.scss
+++ b/src/components/common/AuthWrapper/auth-landing-page.scss
@@ -131,6 +131,10 @@
   .img-phone-background {
     display: none;
   }
+  .wrap-auth,
+  .wrap-auth-register {
+    box-shadow: none;
+  }
 }
 @media only screen and (min-width: 1441px) {
   .wrap-auth-register {
@@ -170,6 +174,19 @@
     .auth-section {
       justify-content: center;
     }
+  }
+}
+@media only screen and( max-width: 450px) {
+  .wrap-auth-register {
+    h2 {
+      margin-left: 13px;
+    }
+
+    padding: 0;
+    margin-top: 60px;
+  }
+  .display-logo {
+    z-index: 3;
   }
 }
 @media only screen and( max-width: 600px) {
